Add working sample

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 	<script>
 		// Your web app's Firebase configuration
 		var firebaseConfig = {
-			apiKey: "AIzaSyD-e7Ax6Kq2vlUu77x499hMZcJxg9UjPJo",
-			authDomain: "calendar-one-eye.firebaseapp.com",
-			databaseURL: "https://calendar-one-eye.firebaseio.com",
-			projectId: "calendar-one-eye",
-			storageBucket: "calendar-one-eye.appspot.com",
-			messagingSenderId: "743119118129",
-			appId: "1:743119118129:web:04abd2db079f859152da10"
+			apiKey: "AIzaSyAUnf5mCG7bqxrrtytv95R8MRznFX9Psy8",
+    authDomain: "hello-soldier.firebaseapp.com",
+    databaseURL: "https://hello-soldier.firebaseio.com",
+    projectId: "hello-soldier",
+    storageBucket: "hello-soldier.appspot.com",
+    messagingSenderId: "413393423185",
+    appId: "1:413393423185:web:6b85cb07095d4339"
 		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
@@ -75,7 +75,7 @@
 
 
 		// Read DB
-		readDB()
+		readDB();
 
 		// Form methods
 		function checkIfEntryIsRight() {
