Pain basic and empty calendar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	</div>
 	<div class="entries js-entries"></div>
 
+	<div class="calendar__outer"></div>
+
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
 
@@ -163,5 +165,6 @@
 			}
 		}
 	</script>
+	<script src="assets/js/app.js" type="module"></script>
 </body>
 </html>
