Add move css style to an external file and solve some linter problems.
Close #12.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<style>
-		.button-auth, .button-out, .comment-container, .cms {
-			display: none;
-		}
-	</style>
+	<link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
 	<div class="auth">
@@ -117,7 +113,7 @@
 		}
 
 		function onAuthStateChanged(user) {
-			if(user){ 
+			if(user){
 				console.log('El que poner en las rules es', user.uid);
 				// console.log(user, user.photoURL, user.displayName, user.email);
 				buttonOut.style.display = 'inline'
